unpackaged/main/default/objects/Maintenance_Assessment_Question__c/Maintenance_Assessment_Question__c.object-meta.xml
<CustomObject>
    <label>Maintenance Assessment Question</label>
    <nameField>
        <displayFormat>MAQ-{0000}</displayFormat>
        <label>Maintenance Assessment Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Maintenance Assessment Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>