unpackaged/main/default/objects/Maintenance_Assessment_Question__c/fields/Action_Taken__c.field-meta.xml
<CustomField>
    <fullName>Action_Taken__c</fullName>
    <label>Action Taken</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>