unpackaged/main/default/objects/Maintenance_Assessment_Question__c/fields/Maintenance_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Assessment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Maintenance Assessment</label>
    <referenceTo>Maintenance_Assessment__c</referenceTo>
    <relationshipLabel>Maintenance Assessment Questions</relationshipLabel>
    <relationshipName>Maintenance_Assessment_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>